# so2021-tutorial

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
exercise1/: sheet1.md
exercise1/material/: linear_algebra.cc  linear_algebra.hh  task2.cc  task3.cc
exercise1/solution/: task0.md  task1.md  task2.md  task3.md
exercise10/: CRSMatrix.hh  CRSMatrix.impl.hh  DenseMatrix.cc  DenseMatrix.hh  ExpressionTemplates.hh  Vector.hh  sheet10.md  task4.cc
exercise10/material/: Timer.hh
exercise10/solution/: Expr.hh  Vector.hh  VectorOverloaded.hh  task1.cc  task2.5.cc  task2.cc  task3.cc
exercise11/: sheet11.md
exercise2/: power_iteration.cc  power_iteration.cpp  sheet2-edited.md  sheet2.md  task4.c++  task4.cc  task4.cpp  task4_vectorapproach.cc
exercise2/solution/: task1.md  task2_1.cc  task2_2.cc  task2_3.cc  task3.cc  task3.md  task4.cc
exercise3/: dualNumbers.cc  dualNumbersOptional.cc  dual_numbers.cc  sheet3.md  solution4.cpp  task4.cc  task4.cpp
exercise3/material/: task3.cc  task4.cc
exercise3/solution/: task1.cc  task2.cc  task4.1.cc  task4.2.cc  task4.3.cc
exercise4/: DenseMatrix.cc  DenseMatrix.hh  LU.cc  LU.hh  Vector.cc  Vector.hh  readme.md  sheet4.md  task3.cc
exercise4/material/: CMakeLists.txt  DenseMatrix.cc  DenseMatrix.hh  LU.cc  LU.hh  LUtest.cc  SolveSystem.cc  Timer.hh  Util.hh  Vector.cc  Vector.hh  sheet5.cc  task2-test.cc  task2.cc  task3  task3.cc  task4.cc  tmp
exercise4/solution/: DenseMatrix.cc  DenseMatrix.hh  LU.cc  LU.hh  Vector.hh  task2.cc  task3.cc
exercise5/: BinarySearch.cc  CMakeLists.txt  CRS.cpp  CRS.h  CRSMatrix  CRSMatrix.cc  CRSMatrix.hh  CRSMatrix.hh.impl  CRSTest  CRSTest.cc  SparseMatrix.hh  Vector.cc  Vector.hh  binary_test.cc  crs-matrix.hh  crs-matrix.impl.hh  sheet5.md  task4.cc  task4.cpp
exercise5/material/: CRSMatrix.hh  Vector.cc  Vector.hh  task1  task1.cc  task2  task2.cc  task4.cc
exercise5/solution/: CRSMatrix.hh  CRSMatrix.impl.hh  CRSMatrix2.hh  CRSMatrix2.impl.hh  Tests.hh  Vector.cc  Vector.hh  task1.cc  task2.cc  task3.cc  task4.1.cc  task4.2.cc
exercise6/: sheet6.md  task3.cc  task3.hh  task3.impl.hh  task3_main.cc  tmp.cc
exercise6/solution/: Vector.hh  task1a.cc  task1b.cc  task1c.cc  task2.cc
exercise6/solution/task3/: task3.cc  task3.hh  task3.impl.hh  task3_main.cc
exercise7/: sheet7.md
exercise7/material/: CGSolver.hh  Matrix.hh  Vector.hh
exercise7/solution/: task1.1.cc  task1.2.cc  task1.3.cc  task2.cc
exercise7/solution/task3/: CGSolver.hh  Matrix.hh  Vector.hh  test.cc
exercise8/: Polynomial.hh  Polynomial.impl.hh  common.hh  indexed-iter.hh  poly.cc  poly.hh  polynomial.hh  polynomial.impl.hh  sheet8.md  task4.cc  test-task4.cc
exercise8/solution/: task1.cc  task2.cc  task3.1.cc  task3.2.cc  task3.2.hh  task5.hh
exercise9/: sheet9.md
exercise9/solution/: integer_range.hh  integer_range_iterator.hh  task1.1.cc  task1.2.cc  task1.3.cc  task2.cc  task3.cc  task3.hh  task4.cc  task4.hh
exercise9/solution/task4/: version1.cc  version1.hh  version2.cc  version2.hh
