cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
project(CRSMatrixTestProgram VERSION 1.0 LANGUAGES CXX)

cmake_policy(SET CMP0069 NEW)
include(CheckIPOSupported)

add_compile_options( -Wall)
add_compile_options( -Wextra)
add_compile_options( -Wnarrowing)
add_compile_options( -Waddress)
add_compile_options( -Warray-bounds)
add_compile_options( -Wchar-subscripts)
add_compile_options( -Wcomment)
add_compile_options( -Wformat)
add_compile_options( -Wmain)
add_compile_options( -Wmissing-braces)
add_compile_options( -Wparentheses)
add_compile_options( -Wreturn-type)
add_compile_options( -Wsequence-point)
add_compile_options( -Wsign-compare)
add_compile_options( -Wstrict-aliasing)
add_compile_options( -Wstrict-overflow=1)
add_compile_options( -Wswitch)
add_compile_options( -Wtrigraphs)
add_compile_options( -Wuninitialized)
add_compile_options( -Wunused-function)
add_compile_options( -Wunused-label)
add_compile_options( -Wunused-value)
add_compile_options( -Wunused-variable)
add_compile_options( -Wvolatile-register-var)

add_executable(CRSMatrixTest Vector.cc task4.cc)

target_compile_features(CRSMatrixTest PRIVATE cxx_std_20)

target_compile_options(CRSMatrixTest PRIVATE "$<$<CONFIG:Debug>:-ggdb3>")
target_compile_options(CRSMatrixTest PRIVATE "$<$<CONFIG:Release>:-O3>")

check_ipo_supported(RESULT result)
if(result)
  set_property(TARGET CRSMatrixTest PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()
